# 7D-mH-Q-Manifold-Constrained-Holographic-Quantum-Architecture

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  Install-Abrasax.ps1  LICENSE  MANUAL_CLEANUP_REQUIRED.md  README.md  TESTING.md  abrasax_overlay.py  fast_cleanup.bat  full_stress.bat  gpu_launch.bat  launch_ecosystem.ps1  launch_stress_now.bat  package-lock.json  package.json
.cursor/rules/: omnipresence-full-access.mdc
.github/workflows/: abrasax_build_loop.yml  autonomous_ai_loop.yml  ci.yml
agents/: autonomous_agent.ps1  build_agent.ps1  launcher.ps1  master_agent.ps1  optimize_agent.ps1  scheduler.ps1  test_agent.ps1
benchmarks/: Cargo.toml
benchmarks/benches/: core.rs
compiler/: Cargo.toml
compiler/src/: errors.rs  ir.rs  lexer.rs  lib.rs  main.rs  optimize.rs  optimize_enhanced.rs  parser.rs  semantic.rs
compiler/src/backend/: cuda.rs  mod.rs  x86_64.rs
compiler/src/runtime/: x86_runtime.asm
configs/: default_config.json
docs/: 7D_Crystal_System_Paper.md  ABRASAX_GOD_OS.md  API_REFERENCE.md  ARCHITECTURE.md  Compiler_Architecture.md  Crystal_System_Manual.md  Deep_Think_Orchestration.md  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  LANGUAGE_SPEC.md  LLM_LOADER_PROOF.md  Language_Spec_v1.0.md  MATHEMATICS.md  NEXT_STEPS.md  NOTEBOOKLM_INTEGRATION.md  README.md  SELF_ENHANCE_LOOP.md  TRANSFORMER_ARCHITECTURE.md  WORLD_VIEW.md
examples/: 7d.toml  Attention7D.7d  HolographicFold.7d  ManifoldConstraint.7d  ManifoldKernels.7d  Poincare7D.7d  S2Stability.7d  Sovereignty.7d  Unified_7D_Sovereign.7d  Verify_Manifold_Real.7d  sovereignty_v1.7d  sovereignty_v1.7d.out  test_method.7d  test_method.7d.s  test_named.7d  test_simple.7d  test_simple.7d.s
examples/ai/: CrystalLLM.7d  CrystalLLM.7d.out  CrystalLLM.7dexe  CrystalLLM_full.asm  Crystal_Seed_AI.7DCRYSTAL  NeuralWeights.7d  NeuralWeights.7dexe  Verify_Manifold_Real.7d.out  streaming_seed.7d  streaming_seed.7d.out
examples/binary_format/: 7d_elf_specs.h
examples/chat_7d/: 7d.toml
examples/chat_7d/src/: main.7d
examples/conquest/: 7D_TensorRT.7DCRYSTAL  7D_cuDNN.7DCRYSTAL
examples/foundation/: 7D_ALU.7DCRYSTAL  7D_Full_Adder.7DCRYSTAL  7D_NAND_Gate.7DCRYSTAL
examples/hello_7d/: 7d.toml  DOCS.md
examples/hello_7d/src/: main.7d
examples/mirrored_core/: CMakeLists.txt  RUN_7D_GUIDE.md
examples/mirrored_core/cpp/: CMakeLists.txt  gguf_loader.7d  gguf_loader.7ds
examples/mirrored_core/cuda/: CMakeLists.txt
examples/mirrored_core/cuda-kernels/: CMakeLists.txt
examples/mirrored_core/hip/: CMakeLists.txt
examples/mirrored_core/tensorrt-oss/: CMakeLists.txt  amd_igpu_input.py
examples/mirrored_core/trt-llm/: setup.py
examples/runtime/: 7D_CUDA_Runtime.7DCRYSTAL
installer/: INSTALL_ABRASAX.ps1
kernels/cuda/: 7d_complete_kernels.cu  7d_enhanced_kernels.cu  7d_manifold_kernels.cu
llm_builder/: Cargo.toml
llm_builder/models/7D-Crystal-1.5B/: 7D-Crystal-1.5B-Q4_K_M.gguf
llm_builder/src/: config.rs  gguf.rs  lib.rs  manifold.rs  model.rs  modules.rs  optimizer.rs  quantize.rs  safetensors.rs  tokenizer.rs  train.rs  weights.rs
model_runner/: Cargo.toml
model_runner/examples/: verify_loader.rs
model_runner/src/: backend.rs  lib.rs  sampler.rs  tests.rs  tokenizer.rs
projects/compiler_service/: Cargo.toml  README.md
projects/compiler_service/src/: main.rs
projects/crystal_agi/: Cargo.toml  README.md
projects/crystal_agi/src/: main.rs
projects/holographic_memory/: README.md  memory.py
projects/hyperbolic_ml/: README.md  __init__.py  core.py  trainer.py
projects/inference_server/: Cargo.toml  README.md  check_log.txt
projects/inference_server/src/: main.rs
projects/neural_language/: Cargo.toml  README.md
projects/neural_language/src/: lib.rs  math_64d.rs
projects/neural_language/stdlib/: holographic.7d  manifold.7d  math.7d  quantum.7d
projects/quantum_hybrid/: Cargo.toml  README.md
projects/quantum_hybrid/src/: attention.rs  hybrid.rs  main.rs  simulator.rs
projects/recursive_optimizer/: Cargo.toml  README.md
projects/recursive_optimizer/src/: introspector.rs  lib.rs  main.rs  mutator.rs  optimizer.rs  reasoner.rs
projects/sovereign_assistant/: Cargo.toml  README.md
projects/sovereign_assistant/src/: hardware.rs  inference.rs  main.rs  stressor.rs  tokenizer.rs  tools.rs
projects/web_hologram/: package-lock.json  package.json
projects/web_hologram/src/app/: page.tsx
runtime/: Cargo.toml  build.rs  compile_cuda.bat
runtime/src/: allocator.rs  api.rs  compute.rs  cuda_kernels.cu  executor.rs  gpu.rs  ir.rs  jit.rs  kernels.rs  kernels.wgsl  lib.rs  main.rs  quantum.rs  quantum_enhanced.rs  wgpu_gpu.rs
scripts/: abrasax_agent_builder.ps1  abrasax_agent_builder.py  abrasax_self_enhance_loop.py  action_config.yaml  agi_omnipresence.py  autonomous_agent.py  cleanup.py  cleanup_json.py  crystal_7d_vlc.py  crystal_bridge.py  crystal_bridge_turbo.py  deepseek_4x_agent.py  delete_duplicates.py  dual_gpu_virtual_desktop.py  game_mode_vlc.py  holovid_120fps_enhancer.py  holovid_ultimate_enhancer.py  omnipresence_realtime.py  python_quantum_proxy.py  run_omnipresence_autonomous.ps1  screen_agent.py  start_omnipresence.py  start_self_enhance_loop.ps1  system_overwatch.py  vlc_4k_enhancer.py  vlc_7d_processor.py  vlc_fixed.py  vlc_full_gpu_offload.py  vlc_simple_enhance.py  vram_6gb_config.py
scripts/logs/: embeddings.jsonl  self_enhance_20260222_203006.jsonl  self_enhance_20260222_203051.jsonl  self_enhance_20260222_203116.jsonl
src/: main.rs  onnx.rs  reward.rs  task.rs
src/research/: explorer.rs  mod.rs
src/rewrite/: ast.rs  cross_lang.rs  debate.rs  mod.rs  score.rs  shadow.rs
tests/: 64d_matrix_results.json  integration_tests.rs  run_all.py  test_64d_matrix.py  test_manifold_bounds_3d.py  test_manifold_extended.py  test_manifold_extreme.py  test_manifold_infinite_break.py  test_manifold_super_upper.py
tools/: Cargo.toml
tools/profiler/: Cargo.toml
tools/profiler/src/: main.rs
tools/src/: main.rs
transformer/: Cargo.toml
transformer/src/: attention.rs  layers.rs  lib.rs  manifold_ops.rs  rope.rs
(+11353 files in other folders)
