[workspace]
resolver = "2"
members = [
    "compiler",
    "runtime",
    "llm_builder",
    "model_runner",
    "transformer",
    "tools/profiler",
    "benchmarks",
    "projects/sovereign_assistant",
    "projects/quantum_hybrid",
    "projects/inference_server",
    "projects/crystal_agi",
    "projects/compiler_service", "projects/neural_language",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes <basedgod@7dcrystal.io>"]
license = "MIT"
repository = "https://github.com/basedgod55hjl/7D-Crystal-System"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Math & ML
ndarray = "0.15"
half = { version = "2.3", features = ["std", "serde"] }
num-complex = "0.4"
rand = "0.8"
rayon = "1.8"

# GPU/Compute
cudarc = "0.10"
candle-core = "0.4"
ort = "2.0"

# FFI
libc = "0.2"
bindgen = "0.69"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
