[package]
name = "crystal-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "7D Crystal System Benchmarks"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"
rayon = "1.8"

# Internal crates
crystal-compiler = { path = "../compiler" }
crystal-runtime = { path = "../runtime" }

# Comment out benchmarks until files are created
# [[bench]]
# name = "manifold"
# harness = false

# [[bench]]
# name = "holographic"
# harness = false
