[package]
name = "llm_builder"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes"]
description = "7D Crystal LLM Builder - Complete model building, training, and quantization"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.15"
half = { version = "2.3", features = ["std", "serde"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
memmap2 = "0.9"
byteorder = "1.5"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
safetensors = "0.4"
tokenizers = "0.15"

[features]
default = []
cuda = ["cudarc"]
metal = []

[dependencies.candle-core]
version = "0.4" 
features = [] # candle-core 0.4 handles gguf via candle-core or separate candle-nn, checking docs.
# Actually, for GGUF we usually need `candle-core` and maybe `candle-nn`. 
# But let's check if the user environment has `candle-core`.
# The workspace has `candle-core` mentioned as optional in root. 
# Let's use the workspace version but enable it here.
# Wait, workspace has it as optional.
# Let's just add it directly.
version = "0.4.0"

