[package]
name = "llm_builder"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes"]
description = "7D Crystal LLM Builder - Complete model building, training, and quantization"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.15"
half = { version = "2.3", features = ["std", "serde"] }
num-complex = "0.4"
rayon = "1.8"
memmap2 = "0.9"
byteorder = "1.5"
indicatif = "0.17"
safetensors = "0.4"

# Use candle for GGUF tensor loading
candle-core = "0.8"

[features]
default = []
cuda = ["cudarc"]
metal = []

[dependencies.cudarc]
version = "0.12"
optional = true
