[package]
name = "crystal-llm-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "7D Crystal LLM Builder - Complete model building, training, and quantization"

[lib]
name = "llm_builder"
path = "src/lib.rs"


[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ndarray.workspace = true
half.workspace = true
num-complex.workspace = true
rayon.workspace = true
memmap2.workspace = true
byteorder.workspace = true
indicatif.workspace = true
safetensors = "0.4"
bytemuck = "1.14"

# Use candle for GGUF tensor loading
candle-core = "0.8"

[features]
default = []
cuda = ["cudarc"]
metal = []

[dependencies.cudarc]
workspace = true
optional = true
