[package]
name = "model_runner"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes"]
description = "7D Crystal Model Runner - High-performance LLM inference engine"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
ndarray = "0.15"
half = { version = "2.3", features = ["std"] }
memmap2 = "0.9"
byteorder = "1.5"
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"
rand = "0.8"

llm_builder = { path = "../llm_builder" }
transformer = { path = "../transformer" }
candle-core = "0.8"

[features]
default = []
cuda = ["cudarc"]
metal = []

[dependencies.cudarc]
version = "0.10"
optional = true
