[package]
name = "crystal-model-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "7D Crystal Model Runner - High-performance LLM inference engine"


[lib]
name = "model_runner"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ndarray.workspace = true
half.workspace = true
memmap2.workspace = true
byteorder.workspace = true
rayon.workspace = true
parking_lot.workspace = true
rand.workspace = true

crystal-llm-builder = { workspace = true }
transformer = { package = "crystal-transformer", path = "../transformer" }
candle-core = "0.8"

[features]
default = []
cuda = ["cudarc"]
metal = []

[dependencies.cudarc]
workspace = true
optional = true
