# ═══════════════════════════════════════════════════════════════════════════════
# 🔮 7D CRYSTAL RUNTIME
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "crystal-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "7D Crystal Runtime - GPU execution engine for manifold-constrained computation"
keywords = ["runtime", "gpu", "cuda", "7d", "manifold"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "crystal_runtime"
path = "src/lib.rs"

[[bin]]
name = "runtime"
path = "src/main.rs"

[[bin]]
name = "core_mapper"
path = "src/bin/core_mapper.rs"

[[bin]]
name = "verify_cuda"
path = "src/bin/verify_cuda.rs"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true
ndarray.workspace = true
half.workspace = true
num-complex.workspace = true
byteorder.workspace = true
memmap2.workspace = true
parking_lot.workspace = true

# GPU
cudarc = { workspace = true, optional = true }

# Local
once_cell = "1.19"
crossbeam-channel = "0.5"

# WGPU & API
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.17.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["cuda", "wgpu_backend"]
cuda = ["dep:cudarc"]
hip = []
metal = []
wgpu_backend = []
cpu-only = []

# Benchmarks (uncomment when benches/manifold_bench.rs exists)
# [[bench]]
# name = "manifold_bench"
# harness = false
