[package]
name = "transformer"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes"]
description = "7D Crystal Transformer - Novel manifold-constrained architecture"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
