[package]
name = "crystal-transformer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "7D Crystal Transformer - Novel manifold-constrained architecture"

[dependencies]
serde.workspace = true
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
