[package]
name = "compiler_service"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes <basedgod@7dcrystal.io>"]
description = "Sovereign Compiler as a Service - 7D Crystal System"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.9"

# Local crates
compiler = { path = "../../compiler" }
runtime = { path = "../../runtime" }

[[bin]]
name = "compiler_service"
path = "src/main.rs"
