[package]
name = "crystal-compiler-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "7D Crystal Compiler as a Service - Web API"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.9"

# Local crates
crystal-compiler = { path = "../../compiler" }
crystal-runtime = { path = "../../runtime" }

[[bin]]
name = "compiler_service"
path = "src/main.rs"
