[package]
name = "crystal-agi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Crystal AGI - Manifold-Native Autonomous Intelligence"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local crates
crystal-compiler = { workspace = true }
crystal-runtime = { workspace = true }
crystal-transformer = { workspace = true }

[[bin]]
name = "crystal_agi"
path = "src/main.rs"
