[package]
name = "inference_server"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes <basedgod@7dcrystal.io>"]
description = "Multi-GPU Inference Server - 7D Crystal System"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.6", features = ["v4"] }

# GPU
cudarc = { version = "0.10", optional = true }

# Local crates
transformer = { path = "../../transformer" }
llm_builder = { path = "../../llm_builder" }
model_runner = { path = "../../model_runner" }

[features]
default = []
cuda = ["cudarc"]

[[bin]]
name = "inference_server"
path = "src/main.rs"
