[package]
name = "crystal-inference-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Multi-GPU Inference Server - 7D Crystal System"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid = { version = "1.6", features = ["v4"] }

# GPU
cudarc = { workspace = true, optional = true }

# Local crates
crystal-transformer = { workspace = true }
crystal-llm-builder = { workspace = true }
crystal-model-runner = { workspace = true }

[features]
default = []
cuda = ["cudarc"]

[[bin]]
name = "inference_server"
path = "src/main.rs"
