[package]
name = "sovereign_assistant"
version = "1.0.0"
edition = "2021"
authors = ["Sir Charles Spikes <basedgod@7dcrystal.io>"]
description = "Sovereign Local AI Assistant - 7D Crystal System"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# ML
half = { version = "2.3", features = ["std"] }
tiktoken-rs = "0.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
colored = "2.0"

# Local crates
transformer = { path = "../../transformer" }
llm_builder = { path = "../../llm_builder" }
model_runner = { path = "../../model_runner" }
neural_language = { path = "../../projects/neural_language" }

[[bin]]
name = "sovereign"
path = "src/main.rs"
